--- a/index.html
+++ b/index.html
@@ -4,31 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>T-Shirt Color Picker</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
-
     <div class="container">
-        <h1>T-Shirt Color Picker</h1>
-
-        <main>
-            <section id="left">
-                <h2>Colors Left:</h2>
-                <ul id="colors-left"></ul>
-            </section>
-            <section id="right">
-                <canvas id="canvas" width="350em" height="350em"></canvas>
-            </section>
-        </main>
-    
         <div class="row">
-            <button id="get-color-btn" onclick="getColor()">Get Random Color</button>
-            <button onclick="washClothes()">Wash Clothes</button>
+            <div class="col">
+                <h1 class="mt-3 mb-0">T-Shirt Color Picker</h1>
+            </div>
         </div>
-    
-        <div>
-            <div id="picked-color"></div>
+        <div class="row">
+            <div class="col-12">
+                <div id="shirt-display">
+                    <canvas id="canvas" width="350em" height="350em"></canvas>
+                </div>
+            </div>
+            <div class="col-12">
+                <div class="row">
+                    <div class="col-12">
+                        <h2>Colors Left:</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <ul>
+                            <div class="row" id="colors-left"></div>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <button id="get-color-btn" onclick="getColor()">Get Random Color</button>
+                <button onclick="washClothes()">Wash Clothes</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col mb-5">
+                <div id="picked-color"></div>
+            </div>
         </div>
     </div>
 
