Make layout responsive for larger screens

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 col-md-6">
                 <div id="shirt-display">
                     <canvas id="canvas" width="350em" height="350em"></canvas>
                 </div>
             </div>
-            <div class="col-12">
+            <div class="col-12 col-md-6">
                 <div class="row">
                     <div class="col-12">
                         <h2>Colors Left:</h2>
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col mb-5">
+            <div class="col mb-4">
                 <div id="picked-color"></div>
             </div>
         </div>
