--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1 class="mt-3 mb-0">T-Shirt Color Picker</h1>
+                <h1 class="mt-3 mb-0 mb-md-3">T-Shirt Color Picker</h1>
             </div>
         </div>
         <div class="row">
